Replace calls to <class>.newInstance with <class>.getConstructor().newInstance.
This is safer; newInstance on class objects bypasses exception checking.

--
MOS_MIGRATED_REVID=129976805